--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
   <div class="container d-flex align-items-center justify-content-between">
     
     <a class="navbar-brand" href="#">
-      <img src="/images/logo.png" alt="logo" width="150">
+      <img src="logo.png" alt="logo" width="150">
     </a>
 
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
@@ -107,7 +107,7 @@
       </div>
 
       <div class="col-md-6 text-center" data-aos="fade-left">
-        <img src="/images/hero.png" alt="hero" class="img-fluid" width="500">
+        <img src="hero.png" alt="hero" class="img-fluid" width="500">
       </div>
 
     </div>
