--- a/index.html
+++ b/index.html
@@ -5,21 +5,13 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Portfolio | John Doe</title>
 
-  <!-- Bootstrap 5 CDN -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
-  
-  <!-- Google Fonts -->
   <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
-
-  <!-- AOS CSS -->
   <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet" />
+<!-- Font Awesome -->
+<link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" rel="stylesheet">
 
-  <!-- Custom Styles -->
   <style>
-    html {
-      scroll-behavior: smooth;
-    }
-
     body {
       font-family: 'Roboto', sans-serif;
       overflow-x: hidden;
@@ -39,26 +31,92 @@
       background-color: #6C3DFF;
       color: white;
     }
-    .section-padding {
-      padding: 80px 0;
-    }
     .bg-light-blue {
       background-color: #F4F9FC;
     }
     .text-purple {
       color: #6C3DFF;
     }
+    .expertise-box {
+      background-color: #F4F9FC;
+      border-radius: 10px;
+      padding: 40px 25px;
+      text-align: left;
+      position: relative;
+      transition: all 0.3s ease;
+      height: 100%;
+    }
+    .expertise-box img {
+      width: 70px;
+      height: 70px;
+      object-fit: contain;
+      margin-bottom: 20px;
+      background-color: white;
+      border-radius: 10px;
+      padding: 10px;
+      box-shadow: 0px 5px 15px rgba(0,0,0,0.05);
+    }
+    .expertise-box::after {
+      content: "";
+      position: absolute;
+      bottom: 0;
+      width: 100%;
+      height: 4px;
+      background-color: #6C3DFF;
+      transform: scaleX(0);
+      transform-origin: center;
+      transition: transform 0.3s ease;
+      border-radius: 2px;
+    }
+    .expertise-box:hover::after {
+      transform: scaleX(1);
+    }
+    /* ... keep existing styles ... */
+.nav-link {
+  transition: color 0.3s ease;
+}
+.nav-link:hover {
+  color: #6C3DFF !important;
+}
+
+.expertise-box::after {
+  content: "";
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  width: 100%; /* ✅ Full width underline */
+  height: 4px;
+  background-color: #6C3DFF;
+  transform: scaleX(0);
+  transform-origin: left;
+  transition: transform 0.3s ease;
+  border-radius: 2px;
+}
+.expertise-box:hover::after {
+  transform: scaleX(1);
+}
+
+img {
+  text-align: left;
+}
+
+p {
+  text-align: left;
+}
+
+h1, h2, h3, h4, h5, h6 {
+  text-align: left;
+}
+
   </style>
 </head>
 <body>
 
-<nav class="navbar navbar-expand-lg shadow-sm border-bottom" style="border-color: #dbdedf;">
+<nav class="navbar navbar-expand-lg shadow-sm border-bottom" data-aos="fade-down" data-aos-delay="100" style="border-color: #dbdedf;">
   <div class="container d-flex align-items-center justify-content-between">
-    
     <a class="navbar-brand" href="#">
       <img src="logo.png" alt="logo" width="150">
     </a>
-
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
       aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation" style="color: #6C3DFF;border: 1px solid #6C3DFF;">
       <span class="navbar-toggler-icon"></span>
@@ -82,22 +140,18 @@
         </li>
       </ul>
     </div>
-
     <form class="d-none d-lg-block">
       <button class="btn btn-outline-purple" type="button">Contact</button>
     </form>
-
   </div>
 </nav>
-
 
 <section class="bg-light-blue py-5">
   <div class="container">
     <div class="row align-items-center">
-      
       <div class="col-md-6 mb-4 mb-md-0" data-aos="fade-right">
         <p class="fw-bold text-muted" style="font-size: 14px;">Hey, I am John</p>
-        <h2 class="fs-1 fw-semibold">
+        <h2 class="fw-semibold">
           I create <span class="text-purple">product design</span><br> and brand experience
         </h2>
         <p class="text-muted fs-6">
@@ -105,22 +159,144 @@
         </p>
         <button class="btn btn-purple mt-3">Get In Touch</button>
       </div>
-
       <div class="col-md-6 text-center" data-aos="fade-left">
         <img src="hero.png" alt="hero" class="img-fluid" width="500">
+      </div>
+    </div>
+  </div>
+</section>
+
+<section class="py-5 bg-white text-left" data-aos="fade-up" data-aos-delay="100">
+  <div class="container">
+    <p class="text-uppercase text-muted fw-semibold mb-2">My Skills</p>
+    <h2 class="fw-bold mb-5">My Expertise</h2>
+    <div class="row g-4">
+      <div class="col-md-6 col-lg-3" data-aos="fade-up" data-aos-delay="100">
+        <div class="expertise-box">
+          <img src="product-chain 1.png" alt="">
+          <h5 class="fw-bold">Strategy & Direction</h5>
+          <p class="text-muted small">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse varius enim in eros elementum tristique.</p>
+        </div>
+      </div>
+      <div class="col-md-6 col-lg-3" data-aos="fade-up" data-aos-delay="200">
+        <div class="expertise-box">
+          <img src="tag 1.png" alt="">
+          <h5 class="fw-bold">Branding & Logo</h5>
+          <p class="text-muted small">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse varius enim in eros elementum tristique.</p>
+        </div>
+      </div>
+      <div class="col-md-6 col-lg-3" data-aos="fade-up" data-aos-delay="300">
+        <div class="expertise-box">
+          <img src="feather-pen 1.png" alt="">
+          <h5 class="fw-bold">UI & UX Design</h5>
+          <p class="text-muted small">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse varius enim in eros elementum tristique.</p>
+        </div>
+      </div>
+      <div class="col-md-6 col-lg-3" data-aos="fade-up" data-aos-delay="400">
+        <div class="expertise-box">
+          <img src="code.png" alt="">
+          <h5 class="fw-bold">Webflow Development</h5>
+          <p class="text-muted small">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse varius enim in eros elementum tristique.</p>
+        </div>
+      </div>
+    </div>
+  </div>
+</section>
+<section class="py-5 bg-white">
+  <div class="container">
+    <div class="row align-items-center justify-content-center gy-4 text-center text-md-start">
+
+      <div class="col-md-5" data-aos="fade-right">
+        <img src="About Me.png" alt="about" class="img-fluid" style="max-width: 300px;">
+      </div>
+
+      <div class="col-md-6" data-aos="fade-left">
+        <p class="text-muted fw-semibold mb-2">About</p>
+        <h2 class="fw-bold mb-3">About Me</h2>
+        <p class="text-muted">
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Porro, deleniti? Magni voluptate deleniti impedit fuga harum sapiente, voluptas at ut deserunt blanditiis perferendis sint quasi dolor perspiciatis.
+        </p>
+        <p class="text-muted">
+          Ipsam id a quidem delectus sed. Possimus incidunt animi ex nobis voluptatum porro!
+        </p>
       </div>
 
     </div>
   </div>
 </section>
+<section class="py-5 bg-white" data-aos="fade" data-aos-delay="100">
+  <div class="container">
+    <!-- Heading & Button -->
+    <div class="d-flex flex-wrap justify-content-between align-items-center mb-4 gap-3" >
+      <div>
+        <p class="text-muted fw-semibold mb-1">Recent Projects</p>
+        <h2 class="fw-bold">My Portfolio</h2>
+      </div>
+      <a href="#" class="btn btn-danger d-flex align-items-center gap-2">
+        <i class="fab fa-dribbble"></i> Visit My Dribbble
+      </a>
+    </div>
+
+    <!-- Cards -->
+    <div class="row g-4">
+      <!-- Card 1 -->
+      <div class="col-md-6 col-lg-4">
+        <div class="card shadow-sm h-100 border-0">
+          <img src="ahuse.png" class="card-img-top" alt="Ahuse Project">
+          <div class="card-body">
+            <h5 class="fw-bold">Ahuse</h5>
+            <p class="text-muted small mb-3">
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse varius enim in eros.
+            </p>
+            <a href="#" class="text-decoration-none fw-semibold text-dark d-flex align-items-center gap-1">
+              View In Dribbble <i class="fas fa-arrow-up-right-from-square text-purple"></i>
+            </a>
+          </div>
+        </div>
+      </div>
+
+      <!-- Card 2 -->
+      <div class="col-md-6 col-lg-4">
+        <div class="card shadow-sm h-100 border-0">
+          <img src="app.png" class="card-img-top" alt="App Dashboard">
+          <div class="card-body">
+            <h5 class="fw-bold">App Dashboard</h5>
+            <p class="text-muted small mb-3">
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse varius enim in eros.
+            </p>
+            <a href="#" class="text-decoration-none fw-semibold text-dark d-flex align-items-center gap-1">
+              View In Dribbble <i class="fas fa-arrow-up-right-from-square text-purple"></i>
+            </a>
+          </div>
+        </div>
+      </div>
+
+      <!-- Card 3 -->
+      <div class="col-md-6 col-lg-4">
+        <div class="card shadow-sm h-100 border-0">
+          <img src="easy-rent.png" class="card-img-top" alt="Easy Rent">
+          <div class="card-body">
+            <h5 class="fw-bold">Easy Rent</h5>
+            <p class="text-muted small mb-3">
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse varius enim in eros.
+            </p>
+            <a href="#" class="text-decoration-none fw-semibold text-dark d-flex align-items-center gap-1">
+              View In Dribbble <i class="fas fa-arrow-up-right-from-square text-purple"></i>
+            </a>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</section>
+
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
 <script>
   AOS.init({
-    duration: 1000, 
-    once: true,     
+    duration: 1000,
+    once: true
   });
 </script>
-
 </body>
 </html>
