--- a/index.html
+++ b/index.html
@@ -12,6 +12,10 @@
 <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" rel="stylesheet">
 
   <style>
+    * {
+      margin: 0;
+    }
+
     body {
       font-family: 'Roboto', sans-serif;
       overflow-x: hidden;
@@ -286,6 +290,80 @@ h1, h2, h3, h4, h5, h6 {
           </div>
         </div>
       </div>
+    </div>
+  </div>
+</section>
+<section class="py-5 bg-light-blue" data-aos="fade-up" data-aos-delay="100">
+  <div class="container">
+    <h2 class="text-left mb-5">Customer Testimonials</h2>
+    <div class="row gy-4 justify-content-center">
+      
+      <div class="col-12 col-md-6 col-lg-4" data-aos="fade-up" data-aos-delay="200">
+        <div class="card border border-success h-100">
+          <div class="card-body">
+            <div class="mb-2 text-success">
+              <i class="fa fa-star"></i>
+              <i class="fa fa-star"></i>
+              <i class="fa fa-star"></i>
+              <i class="fa fa-star"></i>
+              <i class="fa fa-star"></i>
+            </div>
+            <p class="mb-3">"Lorem ipsum dolor sit amet consectetur adipisicing elit. Labore id officia tempore commodi iste illum earum reiciendis adipisci ipsum dignissimos."</p>
+            <div class="d-flex align-items-center">
+              <img src="user1.png" alt="user" width="50" class="rounded-circle me-3">
+              <div>
+                <p class="fs-5 mb-0">Dianne Russell</p>
+                <p class="fs-6 mb-0">Starbucks</p>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <div class="col-12 col-md-6 col-lg-4" data-aos="fade-up" data-aos-delay="200">
+        <div class="card border border-success h-100">
+          <div class="card-body">
+            <div class="mb-2 text-success">
+              <i class="fa fa-star"></i>
+              <i class="fa fa-star"></i>
+              <i class="fa fa-star"></i>
+              <i class="fa fa-star"></i>
+              <i class="fa fa-star"></i>
+            </div>
+            <p class="mb-3">"Lorem ipsum dolor sit amet consectetur adipisicing elit. Labore id officia tempore commodi iste illum earum reiciendis adipisci ipsum dignissimos."</p>
+            <div class="d-flex align-items-center">
+              <img src="user2.png" alt="user" width="50" class="rounded-circle me-3">
+              <div>
+                <p class="fs-5 mb-0">Kristin Watson</p>
+                <p class="fs-6 mb-0">Louis Vuitton</p>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <div class="col-12 col-md-6 col-lg-4" data-aos="fade-up" data-aos-delay="200">
+        <div class="card border border-success h-100">
+          <div class="card-body">
+            <div class="mb-2 text-success">
+              <i class="fa fa-star"></i>
+              <i class="fa fa-star"></i>
+              <i class="fa fa-star"></i>
+              <i class="fa fa-star"></i>
+              <i class="fa fa-star"></i>
+            </div>
+            <p class="mb-3">"Lorem ipsum dolor sit amet consectetur adipisicing elit. Labore id officia tempore commodi iste illum earum reiciendis adipisci ipsum dignissimos."</p>
+            <div class="d-flex align-items-center">
+              <img src="user3.png" alt="user" width="50" class="rounded-circle me-3">
+              <div>
+                <p class="fs-5 mb-0">Kathryn Murphy</p>
+                <p class="fs-6 mb-0">McDonald's</p>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+
     </div>
   </div>
 </section>
