--- a/index.html
+++ b/index.html
@@ -112,6 +112,9 @@ h1, h2, h3, h4, h5, h6 {
   text-align: left;
 }
 
+.border-purple {
+  border-color: #6C3DFF !important;
+}
   </style>
 </head>
 <body>
@@ -368,6 +371,98 @@ h1, h2, h3, h4, h5, h6 {
   </div>
 </section>
 
+<section style="width: 100%;">
+  <style>
+    section form input {
+      padding: 8px 16px;
+      width: 100%;
+    }
+  </style>
+  <div class="container" style="width: 100%;">
+    <p class="mute text-center">Get In Touch</p>
+    <h2 class="text-center">Contact Me</h2>
+    <p class="text-center">Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+    <form action="justify-content-center" class="text-center" style="width: 100%;">
+      <div class="row justify-content-center gap-5">
+        <div class="col-3">
+          <label for="fname">First Name</label><br>
+          <input type="text" name="fname" id="fname" class=" border-1 border-purple rounded">
+        </div>
+        <div class="col-3">
+          <label for="lname">Last Name</label><br>
+          <input type="text" name="lname" id="lname" class="border-1 border-purple rounded">
+        </div>
+      </div>
+      <div class="row justify-content-center gap-5 mt-3">
+        <div class="col-3">
+          <label for="email">Email</label><br>
+          <input type="email" name="email" id="email" class=" border-1 border-purple rounded">
+        </div>
+        <div class="col-3">
+          <label for="phone">Phone Number</label><br>
+          <input type="text" name="phone" id="phone" class=" border-1 border-purple rounded">
+        </div>
+      </div>
+      <div class="row justify-content-center mt-3">
+        <div class="col-7">
+          <label for="cat">Choose a Topic</label><br>
+          <select name="cat" id="cat" class="form-select border-1 border-purple rounded">
+            <option value="select">Select One...</option>
+            <option value="development">Development</option>
+            <option value="marketing">Marketing</option>
+            <option value="other">Other</option>
+          </select>
+        </div>
+         <div class="row justify-content-center mt-3">
+        <div class="col-7">
+          <label for="message">Message</label><br>
+          <textarea name="message" id="message" rows="5" class="form-control border-1 border-purple rounded" placeholder="Type your message..."></textarea>
+        </div>
+        <div style="display: inline-block;">
+          <input type="checkbox" name="c" id="c" class="mt-3">
+          <label for="c" class="text-left">I accept the terms</label>
+        </div>
+        <button class="btn btn-purple" style="width: 10%;">Submit</button>
+    </form>
+  </div>
+</section>
+
+<footer class="bg-light-blue py-3">
+  <div class="container text-center">
+    <div class="row">
+      <div class="col">
+        <img src="logo.png" alt="logo" width="150">
+      </div>
+      <div class="col">
+        <ul class="list-unstyled d-flex justify-content-center gap-3 mb-0">
+          <li><a href="#" class="text-decoration-none text-dark">Home</a></li>
+          <li><a href="#" class="text-decoration-none text-dark">Portfolio</a></li>
+          <li><a href="#" class="text-decoration-none text-dark">About Me</a></li>
+          <li><a href="#" class="text-decoration-none text-dark">Contact</a></li>
+          <li><a href="#" class="text-decoration-none text-dark">Testimonials</a></li>
+        </ul>
+      </div>
+      <div class="col row">
+        <ul class="list-unstyled d-flex justify-content-center gap-3 mb-0">
+          <li><a href="#" class="text-decoration-none text-dark"><i class="fab fa-facebook-f"></i></a></li>
+          <li><a href="#" class="text-decoration-none text-dark"><i class="fab fa-instagram"></i></a></li>
+          <li><a href="#" class="text-decoration-none text-dark"><i class="fab fa-twitter"></i></a></li>
+          <li><a href="#" class="text-decoration-none text-dark"><i class="fab fa-linkedin-in"></i></a></li>
+        </ul>
+      </div>
+    </div>
+    <div class="row">
+      <div class="col">
+        <p class="text-muted">Copyright &copy; 2025</p>
+      </div>
+      <div class="col">
+        <a href="#" class="text-decoration-none text-dark">Privacy Policy</a>
+        <a href="#" class="text-decoration-none text-dark">Terms of Service</a>
+        <a href="#" class="text-decoration-none text-dark">Cookies Settings</a>
+      </div>
+    </div>
+  </div>
+</footer>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
 <script>
